cif/org.eclipse.escet.cif.tests/tests/datasynth/invalid7.cif.err
ERROR: Data-based supervisory controller synthesis failed due to unsatisfied preconditions:

  --------------------------------------------------
  (1/1) Failed to statically evaluate an expression.
  --------------------------------------------------
   * In the top-level scope of the specification:
     - requirement invariant p.x > floor(sqrt(-1.0));
                                             ^
